为 Addon 添加配置界面 (#105)
* Addon page

* improve

* fix